# DataVault

./: README.md
datavault-backend/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  server.js
datavault-backend/src/: main.rs
datavault-backend/src/api/: mod.rs  routes.rs
datavault-backend/src/etl/: analyzer.rs  mod.rs
datavault-frontend/: desktop.ini  index.html  package-lock.json  package.json  vite.config.js
datavault-frontend/src/: App.css  App.jsx  index.css  main.jsx
datavault-frontend/src/components/: AuroraBackground.css  AuroraBackground.jsx  CalendarModal.jsx  DataTable.jsx  Navbar.jsx  NotificationPanel.jsx  ProfileMenu.jsx  RollingCube.css  RollingCube.jsx  Sidebar.jsx
datavault-frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
datavault-frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Login.jsx  Settings.jsx
datavault-frontend/src/utils/: api.js  exportCSV.js
